Fixed new task date input fields align

--- a/UI/WebServerResources/UIxTaskEditor.css
+++ b/UI/WebServerResources/UIxTaskEditor.css
@@ -75,6 +75,9 @@ INPUT#statusPercent
 
 .taskstatus .timeDateControl{
   display: inline-block;
-  vertical-align: bottom;
+}
 
+.timeDateControl {
+  vertical-align: top;
+  margin-right: 4px;
 }
